--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <div class="menu">
-            <a href="pages/school/">
+            <a href="pages/school/index.html">
                 <img src="img/schoolcourse.png" alt="школьный курс"> школьный курс
             </a>
             <a href="#">
