--- a/pages/school/index.html
+++ b/pages/school/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>КРОК</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../js/app.js" charset="utf-8"></script>
+    <script src="../../js/app.js" charset="utf-8"></script>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="../img/schoolcourse.png" alt="">
+            <img src="../../img/schoolcourse.png" alt="">
             <span>школьный курс</span>
         </div>
         <div class="tab-wrapper">
