--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="pages/school/index.html">
                 <img src="img/schoolcourse.png" alt="школьный курс"> школьный курс
             </a>
-            <a href="#">
+            <a href="pages/ege/index.html">
                 <img src="img/ege.png" alt="егэ"> егэ 2017
             </a>
-            <a href="#">
+            <a href="pages/olymp/index.html">
                 <img src="img/olimp.png" alt="олимпиады"> олимпиады
             </a>
         </div>
